[tool.poetry]
name = "flink_runner"
version = "0.1.0"
description = "Apache Beam Flink Runner Example"
authors = ["gagocaan <gagocaan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-beam = "2.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
