[tool.poetry]
name = "flink-runner"
version = "0.1.0"
description = "Apache Beam Flink Runner Example."
authors = ["gagocaan <gagocaan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-beam = "^2.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
